--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -1,3 +1,6 @@
+@import '@vuepic/vue-datepicker/dist/main.css';
+@import '@vueform/multiselect/themes/default.css';
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -73,4 +76,8 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
+}
+
+.multiselect-tags-search {
+  background-color: transparent;
 }
